--- a/TodoApi/log4net.config
+++ b/TodoApi/log4net.config
@@ -4,17 +4,29 @@
     <file value="Log\app.log" />
     <datePattern value="dd.MM.yyyy'.log'" />
     <maxSizeRollBackups value="10" />
-    <maximumFileSize value="1MB" />
+    <maximumFileSize value="5MB" />
+    <appendToFile value="true" />
+    <rollingStyle value="Size" />
     <layout type="log4net.Layout.PatternLayout">
       <conversionPattern value="%-5p %d{yyyy-MM-dd hh:mm:ss} [%logger][Thread %thread][%class-%method]:%line %message%newline" />
     </layout>
   </appender>
+  <appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender" >
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%-5p %d{yyyy-MM-dd hh:mm:ss} [%logger][Thread %thread][%class-%method]:%line %message%newline" />
+      </layout>
+    </appender>
    <root>
     <level value="ALL" />
     <appender-ref ref="RollingFile" />
+    <appender-ref ref="ConsoleAppender" />
   </root>
   <logger name="Microsoft">
-        <level value="WARN" />
+        <level value="DEBUG" />
         <appender-ref ref="RollingFile" />
+  </logger>
+  <logger name="Microsoft">
+        <level value="WARN" />
+        <appender-ref ref="ConsoleAppender" />
   </logger>
 </log4net>
